[project]
name = "cvehunt"
version = "0.1.0"
description = "Safe defensive PoC for agentic CVE exploitability workflows"
readme = "README.md"
requires-python = ">=3.11"
dependencies = []

[project.scripts]
cvehunt = "cvehunt.cli:main"

[dependency-groups]
dev = [
    "pytest>=8.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.pytest.ini_options]
testpaths = ["tests"]

